Fixed button spacing.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -237,6 +237,10 @@ input[type="text"] {
   display: none;
 }
 
+#uploadButton{
+  margin: 4px;
+}
+
 /* Style the custom button */
 .custom-button {
   background-color: black;
@@ -244,4 +248,5 @@ input[type="text"] {
   padding: 10px 20px;
   border: none;
   cursor: pointer;
+  margin-top: 40px;
 }
